
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "mouse_tracker_node_js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
rdev        = "0.5.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
